@@ -6,6 +6,9 @@ apt (0.8.15.2) unstable; urgency=high
     - fix missing download progress in apt-get download
   * apt-pkg/contrib/cdromutl.cc:
     - fix escape problem when looking for the mounted devices
+  * apt-pkg/contrib/strutl.{h,cc}, test/libapt/strutil_test.cc:
+    - add new DeEscapeString() similar to DeQuoteQuotedWord but
+      unescape charackter escapes like \0XXX and \xXX (plus add test)
 
  -- Michael Vogt <mvo@debian.org>  Tue, 12 Jul 2011 11:54:47 +0200
 
